nova tela de produto ambiente e empresa

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,8 +9,8 @@
       <button ion-item menuClose (click)="openPage(homePage)">
         Janelas
       </button>
-      <button ion-item menuClose (click)="openPage(ambientePage)">
-        Ambientes
+      <button ion-item menuClose (click)="openPage(produtoPage)">
+        Produtos
       </button>
       <button ion-item menuClose (click)="openPage(avisoPage)">
         Avisos
