novas chamadas jira

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -46,3 +46,7 @@
 .back-button {
   color: white !important;
 }
+
+.alert-ios .alert-radio-label{ white-space: pre-line;}
+.alert-md .alert-radio-label{ white-space: pre-line;}
+.alert-wp .alert-radio-label{ white-space: pre-line;}
