explorerPage and login

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,9 +8,9 @@
   <ion-content>
     
  
-    <ion-list no-lines>
-      <ion-item-group no-lines>
-        <ion-item>
+    <ion-list>
+    
+        <ion-item no-lines>
 
           <ion-avatar item-start>
             <img src="http://www.precision-spine.com/wp-content/uploads/2015/09/person-icon.png">
@@ -20,9 +20,10 @@
           <p>jose.camilo@totvs.com.br</p>
           
         </ion-item>
-      </ion-item-group>
+    
     </ion-list>
-    <ion-list inset>
+
+    <ion-list>
       <ion-item-group>
         <button ion-item menuClose (click)="openPage(homePage)">
           Janelas
