--- a/src/app/app.html
+++ b/src/app/app.html
@@ -16,8 +16,8 @@
             <img src="http://www.precision-spine.com/wp-content/uploads/2015/09/person-icon.png">
           </ion-avatar>
 
-          <h3>José Fernando Camilo da Silva</h3>
-          <p>jose.camilo@totvs.com.br</p>
+          <h3>{{userName}}</h3>
+          <p>{{userMail}}</p>
           
         </ion-item>
     
